# HOHO_Project

./: .gitignore  README.md  main.py  nplay_video.ipynb  pyproject.toml  requirements.txt  test.ipynb  도연_0323.ipynb  도연_Catboost2_0323.ipynb  은솔 - 복사본.ipynb  은솔.ipynb  은솔_.ipynb  재민_0319.ipynb  재민_0320.ipynb  재민_2_교육_전처리ing.ipynb  재민_코스기한확인.ipynb  전처리통합 copy.ipynb  전처리통합.ipynb  코드 통합.ipynb  희상 전처리 파일.ipynb  희상.ipynb  희상_Catboost.ipynb  희상_Catboost2.ipynb  희상_Catboost2_재민 작동.ipynb  희상_통계.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
백업/: 파생변수_아이디어_희상.ipynb
