[project]
name = "hoho-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.10",
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "numpy>=2.4.2",
    "optuna>=4.8.0",
    "pandas>=3.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
]
